included an image

--- a/test.html
+++ b/test.html
@@ -4,5 +4,7 @@
 	</head>
 	<body>
 		<h1>"Test test test"</h1>
+		<p> "Brrrr.This is a paragraph"</p>
+		<img src = "myImage.png">
 	</body>
 </html>
